--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+bootJar {
+    archiveFileName = "pet-be.jar"
+    enabled = true
+}
