--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -2,6 +2,11 @@ server:
   port: 8080
 
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://roundhouse.proxy.rlwy.net:48813/railway
+    username: root
+    password: MDFlYBMEjmLCBYuWAAeTGdrrOxOitqtx
   jpa:
     hibernate:
       ddl-auto: create
