--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,13 +10,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-logging:
-  level:
-    org:
-      hibernate:
-        SQL: debug
-        type: trace
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
